# agenticflow-cli

./: .gitignore  AGENTS.md  CODEX_AUTORESEARCH.md  CODEX_TEST.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  af.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  openapi.json  package-lock.json  package.json  pyproject.toml  test-all.sh
.github/workflows/: ci.yaml  publish-cli.yml  publish-sdk.yml  release-node.yaml  release-python.yaml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.5-REQUIREMENTS.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: agenticflow_cli_open_source_assessment.md  agenticflow_cli_skill_usage.md  cli_secured_ops_baseline.md  minion_runbook.md  n8n_quickwin_create_results.md  n8n_quickwin_translation.md  n8n_translator_v2.md  ops_coverage_report.json  ops_coverage_report.md  public_api_agent_capabilities.md  release.md  sdk.md  sdk_delegation_plan.md  solid_plan.md  v1.6-midmilestone-audit.md  v1.6-release-prep.md  v1.6-scope-research.md
docs/minion/: closed_loop_sop.md  definition_of_done.md
scripts/: agenticflow_cli.py  check_operation_id_mappings.py  minion_orchestrator.sh  minion_worker.sh  ops_coverage_harness.py  ops_release_gate.py  public_api_smoke_harness.py  release_readiness.sh  runtime_loop_harness.py
scripts/module/: __init__.py  translator_v2.py
tests/: conftest.py
(+138 files in other folders)
